# janus-linear

./: .gitignore  CMakeLists.txt  README.md
.history/src/cpp/: qr_20240620112826.hpp
.history/tests/cpp/: CMakeLists_20240620141157.txt  linear_solver_test_20240620141024.cpp
.lh/: CMakeLists.txt.json
.lh/src/cpp/: qr.hpp.json
.lh/tests/cpp/: CMakeLists.txt.json  linear_solver_test.cpp.json
src/cpp/: gmresTe.hpp  gmressolver.hpp  gmressolverfloat.hpp  lute.hpp  qr.hpp  qrTe.hpp  qrcucomplex.cu  qrte.hpp  qrtec.hpp  qrted.hpp  qrtedc.hpp  qrtehdc.hpp
tests/cpp/: CMakeLists.txt  linear_cuda_solver_test.cu  linear_solver_test.cpp
